# django-core-micha

./: APP_FINDINGS.md  CHANGELOG.md  MEMORY.md  PERF_REDIS_SESSIONS_AGENT_INSTRUCTIONS.md  PERF_USERS_CURRENT_AGENT_INSTRUCTIONS.md  ROADMAP-SafeFileField-text-formats.md  WORK_ORDERS.md  pyproject.toml  secrets.yaml
.github/workflows/: publish.yml
docs/design/: notifications-platform.md
src/django_core_micha/: api_urls.py  logging_filters.py
src/django_core_micha/auditlog/: __init__.py  apps.py  audit_context.py  middleware.py  models.py  registry.py  signals.py
src/django_core_micha/auditlog/migrations/: 0001_initial.py
src/django_core_micha/auditlog/services/: redact.py  serialization.py
src/django_core_micha/auth/: _audit_helpers.py  access.py  adapters.py  admin_mfa_middleware.py  apps.py  exception_handler.py  methods.py  models.py  permissions.py  policy.py  recovery.py  security.py  serializers.py  services.py  signals.py  throttles.py  views.py  ws_permissions.py
src/django_core_micha/auth/migrations/: 0003_recoveryrequest_token_hmac.py  0004_recoveryrequest_approved_at.py
src/django_core_micha/emails/: __init__.py  email_texts.py
src/django_core_micha/fields/: __init__.py  safe_file.py
src/django_core_micha/health/: views.py
src/django_core_micha/invitations/: access_codes.py  emails.py  mixins.py  models.py  views.py
src/django_core_micha/invitations/migrations/: 0002_accesscode_code_hmac.py
src/django_core_micha/notifications/: __init__.py  admin.py  api.py  apps.py  consumers.py  delivery.py  dispatch.py  models.py  prefs.py  router.py  routing.py  serializers.py  types.py  urls.py  validators.py  views.py
src/django_core_micha/notifications/migrations/: 0001_initial.py  0002_notification_notificationrecipient_and_more.py  0003_notification_channel_defaults.py  0004_notificationdelivery_partial_unique_constraints.py
src/django_core_micha/onboarding/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
src/django_core_micha/scripts/: generate_env.py  provision_app.py  provision_server_access.py  run_dev.py  sync_secrets.py
src/django_core_micha/settings/: _email_config.py  settings_base.py
src/django_core_micha/validators/: upload.py
tests/: settings.py  test_account_rate_limits.py  test_admin_mfa_middleware.py  test_auditlog.py  test_auth_perf.py  test_auth_throttles.py  test_authn_audit.py  test_channel_layer.py  test_drf_audit.py  test_email_provider.py  test_generate_env.py  test_health_view.py  test_redis_sessions_config.py  test_safe_file_field.py  test_safe_image_field.py  test_settings_base_dependencies.py  test_sync_secrets.py  test_ws_permissions.py
tests/testapp/: models.py
(+14 files in other folders)
