[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-core-micha"
version = "2.18.2"
authors = [
  { name="Micha Bigler", email="micha.bigler2@gmail.com" },
]
description = "Core utilities and settings for Django Apps"
requires-python = ">=3.10"
dependencies = [
    "Django>=6.0.5",
    "PyYAML",
    "psycopg2-binary",
    "filetype>=1.2,<2.0",
    "django-anymail>=10",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
generate-env = "django_core_micha.scripts.generate_env:main"
sync-secrets = "django_core_micha.scripts.sync_secrets:main"
run-dev = "django_core_micha.scripts.run_dev:main"
provision-app = "django_core_micha.scripts.provision_app:main"
provision-server-access = "django_core_micha.scripts.provision_server_access:main"

[project.urls]
Homepage = "https://github.com/bigler-webapps/django-core-micha"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# WICHTIG: Templates / locale-Dateien explizit aufnehmen
[tool.setuptools.package-data]
"django_core_micha" = [
  "templates/**/*.txt",
  "templates/**/*.html",
  "templates/**/*.email",
  "locale/**/django.*",
]

